# trust_costmap

./: .gitignore  INSTALL_VM.md  README.md  VALIDATION.txt  VERIFICATION_REPORT.md  ai_test.txt  context.txt  experiment.launch.py  malicious_object_node.py  package.xml  rviz_shared_mapping.launch.py  rviz_shared_mapping.launch.py.pre_shared_lidar_backup  scenario.yaml  setup.cfg  setup.py  visualize_map.py
config/: lidar_mapping.rviz  lidar_mapping.rviz.in  lidar_mapping.rviz.pre_shared_lidar_backup
scripts/: check_launch_helpers.py  check_shared_mapping.py  check_shared_mapping.py.pre_shared_lidar_backup  generate_attack_heatmap.py  run_rviz_demo.sh  run_shared_lidar_rviz.sh  run_shared_lidar_rviz.sh.pre_shared_lidar_backup  setup_vm.sh  verify_project.sh
test/: test_mapping_utils.py  test_shared_mapping_utils.py  test_shared_mapping_utils.py.pre_shared_lidar_backup  test_spawn_layout.py
trust_costmap/: README.md  experiment_manager_node.py  gazebo_visualization.py  lidar_mapping_node.py  mapping_utils.py  package.xml  scenario.yaml  setup.py  shared_mapping_utils.py  shared_mapping_utils.py.pre_shared_lidar_backup  spawn_layout.py  visualize_map.py
trust_costmap/test/: test_spawn_layout.py
trust_costmap/trust_costmap/: spawn_layout.py
