<?xml version="1.0"?>
<package format="3">
  <name>trust_costmap</name>
  <version>0.0.1</version>
  <description>Trust-weighted costmap experiments using ROS 2 and MovingAI benchmark maps.</description>

  <maintainer email="vboxuser@example.com">vboxuser</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ros_gz_sim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
